--- a/nbs/02_markdownify.ipynb
+++ b/nbs/02_markdownify.ipynb
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_312786/994876590.py:5: DeprecationWarning: \n",
+      "/tmp/ipykernel_314713/994876590.py:5: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -46,6 +46,7 @@
     "#| export\n",
     "def process(file_name_html: str, file_name_markdown: str) -> None:\n",
     "    df = pd.read_json(file_name_html, orient=\"records\", lines=True)\n",
+    "    df[\"content\"] = \"# \" + df[\"title\"] + \"\\n\\n\" + df[\"content\"]\n",
     "    df[\"content\"] = \"\\n\" + df[\"content\"].apply(\n",
     "        lambda text: md(text, heading_style=\"ATX\")\n",
     "    )\n",
