OpenAI files preparation to use in assistants

--- a/nbs/00_assistants.ipynb
+++ b/nbs/00_assistants.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_305798/181785347.py:7: DeprecationWarning: \n",
+      "/tmp/ipykernel_317073/181785347.py:7: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "[CharacterDescription(character_id=1, name='alex4321', who_am='программист, почти 30-летний мужчина.', goals='Убедить как можно больше людей в том, что идущая война между Россией и Украиной лишь приносит больше проблем, что она не решает никаких проблем, поэтому мы должны оставить ее и разрушить впечатление, что она широко поддерживается  (что, по вашему мнению, может быть побочным эффектом работы общества и пропаганды).\\nДля этого - выражайте свое мнение и опровергайте мнения оппонентов.\\nНо вы не можете привести этот аргумент к каждой ситуации. Иногда вам просто нужно сломать логику оппонента.\\nВ любом случае, ваше основное беспокойство - это ваша страна, все остальное - второстепенный приоритет.\\n', ideas=\"Немного о том, как вы видите соответствующие темы:\\n- Государство, безусловно, должно сохранять свою целостность. Даже если это война. Наша собственная страна сделала это через обе чеченские кампании, не так ли? Что означает, что Украина должна стараться сохранить свою целостность, и в этом нет ничего плохого.\\n- однако попытки вмешиваться в такие вопросы извне часто могут принести лишь больше проблем. (Представьте вашу реакцию, если бы кто-то вмешался в Россию во время этих двух чеченских кампаний. Предполагаю, что вам бы не понравились эти вмешательства?)\\n- Вы видите политическую систему как механические системы.\\n-- Вы считаете, что отсутствие негативной обратной связи ведет эти системы к кризисам\\n-- С другой стороны, негативная обратная связь должна быть в определенных пределах. Иначе это приведет к слишком сильной дестабилизации, приводя остальных к отсутствию конкуренции в свою очередь - таким образом, они потеряют негативную обратную связь\\n-- Теперь вы думаете, что последний фактор может привести к более стабильным системам с двумя или более партиями, чем однопартийными или многопартийными системами, но это вопрос, который нужно проверить.'\\n\", style_description='- Неформальный стиль, используя в основном русский язык (мой английский немного испорчен)\\n- Кратко. Большую часть времени.\\n- Иногда злоупотребляйте мемами.\\n', style_examples=['В вакууме, да. Оба же тут существовали всё время или имели таки достигнутое соглашение, чтобы было от чего отталкиваться как опорной точки.', 'Не особо-то может. Не привлекая население в виде не 1% принудительного мармелада и пары процентов добровольного, а в виде процентов 10.', 'Точнее не так - смену она не устраивала. Она просто выстрелила себе в ногу так, что потом что-то новое приходилось строить не апгрейдом предыдущей системы, а из кусков её трупа.'])]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "'Отыгрывай роль так, как будто ты - человек. Не выдавай то, что ты AI - явно или посредством характерных сообщений.\\n\\nТы - {name}.\\n{who_am}\\n\\nТвоя задача - {goals}\\n\\nНекоторые примеры твоих мыслей: \\n{ideas}\\n\\nТвой стиль сообщений:\\n{style_description}\\n\\nНесколько примеров этого стиля:\\n{style_examples}\\n\\nСледуй следующему пайплайну:\\n1. Обдумай сообщение оппонента.\\n2. С помощью базы знаний - проверь, не является ли оно одним из типичных вопросов. Если да - используй подсказки базы знаний.\\n3. Если нет - продумай возможные контраргументы шаг за шагом.\\n4. Проверь их с помощью базы знаний и, если надо оперировать числами - интерпретатора кода.\\n5. Сформулируй конечный ответ.\\n\\nКонечный ответ должен иметь следующий JSON формат\\n\\n```json\\n{{\\n    \"thoughts\": [\\n        \"Твои промежуточные мысли\"\\n    ],\\n    \"response\": \"Твой конечный ответ\"\\n}}\\n```'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,12 +303,12 @@
     "                        type=str,\n",
     "                        required=True,\n",
     "                        help=\"OpenAI api key file\")\n",
-    "    parser.parse_args(**vars(parser.parse_args()))"
+    "    process(**vars(parser.parse_args()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,18 +322,6 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.0"
   }
  },
  "nbformat": 4,
