--- a/nbs/03_downloader_openai_files_split_calculate.ipynb
+++ b/nbs/03_downloader_openai_files_split_calculate.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp scripts/files_split_calculate"
+    "#| default_exp scripts/downloader_files_split_calculate"
    ]
   },
   {
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_315325/350994993.py:5: DeprecationWarning: \n",
+      "/tmp/ipykernel_320147/350994993.py:5: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -111,7 +111,17 @@
     "                        type=str,\n",
     "                        required=True,\n",
     "                        help=\"JSONL file with calculated splits\")\n",
-    "    parser.parse_args(**vars(parser.parse_args()))"
+    "    process(**vars(parser.parse_args()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "import nbdev; nbdev.nbdev_export()"
    ]
   }
  ],
