--- a/nbs/04_downloader_openai_files.ipynb
+++ b/nbs/04_downloader_openai_files.ipynb
@@ -220,7 +220,7 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "if __name__ == \"__main__\" and \"ipykernel_launcher\" not in \" \".join(sys.argv):\n",
+    "if __name__ == \"__main__\" and \"ipykernel_launcher\" not in \" \".join(sys.argv) and \"nbdev\" not in \" \".join(sys.argv):\n",
     "    parser = argparse.ArgumentParser()\n",
     "    parser.add_argument(\"--file_name_content\",\n",
     "                        type=str,\n",
