--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -1,29 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "from .core import *"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \n",
+    "# Robot\n",
     "\n",
-    "> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This file will become your README and also the index of your documentation."
+    "A simple DVC pipeline to create RAG-augmented OpenAI assistant which should be able to discuss news or answer FAQ in the specified style."
    ]
   },
   {
@@ -38,7 +21,7 @@
    "metadata": {},
    "source": [
     "```sh\n",
-    "pip install \n",
+    "bash deploy.sh\n",
     "```"
    ]
   },
@@ -46,34 +29,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
+    "Before using - pull the latest git changes and DVC\n",
+    "\n",
+    "```bash\n",
+    "dvc pull\n",
+    "```\n",
+    "\n",
+    "DVC DAG should be\n",
+    "\n",
+    "```bash\n",
+    "dvc dag --md\n",
+    "```\n",
+    "\n",
+    "```mermaid\n",
+    "flowchart TD\n",
+    "\tnode1[\"concat_openai_file_ids\"]\n",
+    "\tnode2[\"data/characters.yaml.dvc\"]\n",
+    "\tnode3[\"data/faq.csv.dvc\"]\n",
+    "\tnode4[\"data/instruction.txt.dvc\"]\n",
+    "\tnode5[\"data/urls.txt.dvc\"]\n",
+    "\tnode6[\"download_calculate_split\"]\n",
+    "\tnode7[\"download_create_openai_files\"]\n",
+    "\tnode8[\"download_markdownify\"]\n",
+    "\tnode9[\"download_news\"]\n",
+    "\tnode10[\"faq_calculate_split\"]\n",
+    "\tnode11[\"faq_create_openai_files\"]\n",
+    "\tnode12[\"faq_markdown_prepare\"]\n",
+    "\tnode13[\"update_assistant_files\"]\n",
+    "\tnode14[\"update_assistants\"]\n",
+    "\tnode1-->node13\n",
+    "\tnode2-->node14\n",
+    "\tnode3-->node12\n",
+    "\tnode4-->node14\n",
+    "\tnode5-->node9\n",
+    "\tnode6-->node7\n",
+    "\tnode7-->node1\n",
+    "\tnode8-->node6\n",
+    "\tnode8-->node7\n",
+    "\tnode9-->node8\n",
+    "\tnode10-->node11\n",
+    "\tnode11-->node1\n",
+    "\tnode12-->node10\n",
+    "\tnode12-->node11\n",
+    "\tnode14-->node13\n",
+    "```\n",
+    "\n",
+    "To run pipeline run\n",
+    "\n",
+    "```\n",
+    "dvc repro\n",
+    "```"
    ]
   },
   {
