--- a/nbs/01_downloader.ipynb
+++ b/nbs/01_downloader.ipynb
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_317410/912167555.py:9: DeprecationWarning: \n",
+      "/tmp/ipykernel_13010/912167555.py:9: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -144,20 +144,7 @@
       "Reading URLs\n",
       "Reading downloaded content\n",
       "Removing unnecessary content\n",
-      "Downloading new content\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Publish date 05:20, 22 февраля 2024 could not be resolved to UTC\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Downloading new content\n",
       "Saving new content\n"
      ]
     }
@@ -177,7 +164,7 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "if __name__ == \"__main__\" and \"ipykernel_launcher\" not in \" \".join(sys.argv):\n",
+    "if __name__ == \"__main__\" and \"ipykernel_launcher\" not in \" \".join(sys.argv) and \"nbdev\" not in \" \".join(sys.argv):\n",
     "    parser = argparse.ArgumentParser()\n",
     "    parser.add_argument(\"--file_name_urls\",\n",
     "                        type=str,\n",
